--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ body{
     display: flex;    
     justify-content: center;
     align-items: center;
-    min-height: 39vw;
+    height: 85vh;
 }
 
 .box{
@@ -79,6 +79,7 @@ cursor: pointer;
     #flex-container{
         position: relative;
         top: 180px;
+        height: 40vh;
     }
 }
 @media screen and (min-width:530px){
