--- a/index.css
+++ b/index.css
@@ -43,8 +43,9 @@ div {
 }
 figure{
     position: absolute;
-   left: 181px;
-   bottom: -15%;
+   left: 223px;
+   bottom: -10%;
+   margin: 0;
   border-radius: 100%;
   background-color: hsl(150, 100%, 66%);
   
