--- a/index.css
+++ b/index.css
@@ -44,7 +44,7 @@ div {
 figure{
     position: absolute;
    left: 223px;
-   bottom: -23;
+   bottom: -23px;
    margin: 0;
   border-radius: 100%;
   background-color: hsl(150, 100%, 66%);
